# mx-conky

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmd.cpp  cmd.h  conkycustomizedialog.cpp  conkycustomizedialog.h  conkyitem.cpp  conkylistwidget.cpp  conkylistwidget.h  conkymanager.cpp  conkymanager.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mx-conky  mx-conky-dbgsym_18.9_amd64.deb  mx-conky.desktop  mx-conky.pro  mx-conky_0.17.10.dsc  mx-conky_0.17.10.tar.xz  mx-conky_0.17.10_amd64.changes  mx-conky_0.17.10_amd64.deb  mx-conky_0.17.10_i386.changes  mx-conky_0.17.10_i386.deb  mx-conky_0.17.11+1.dsc  mx-conky_0.17.11+1.tar.xz  mx-conky_0.17.11+1_amd64.changes  mx-conky_0.17.11+1_amd64.deb  mx-conky_0.17.11+1_i386.changes  mx-conky_0.17.11+1_i386.deb  mx-conky_0.17.11+2.dsc  mx-conky_0.17.11+2.tar.xz  mx-conky_0.17.11+2_amd64.changes  mx-conky_0.17.11+2_amd64.deb  mx-conky_0.17.11+2_i386.changes  mx-conky_0.17.11+2_i386.deb  (+98 more)
.github/workflows/: release.yaml
debian/: changelog  control  copyright  install  rules
debs/: mx-conky_19.12.dsc  mx-conky_19.12_amd64.changes  mx-conky_19.7.1.dsc  mx-conky_19.7.1_amd64.changes  mx-conky_19.7.dsc  mx-conky_19.7_amd64.changes  mx-conky_19.8.1.dsc  mx-conky_19.8.1_amd64.changes  mx-conky_19.8.dsc  mx-conky_19.8_amd64.changes  mx-conky_19.9.01.dsc  mx-conky_19.9.01_amd64.changes  mx-conky_19.9.dsc  mx-conky_19.9_amd64.changes  mx-conky_20.03.2.dsc  mx-conky_20.03.2_amd64.changes  mx-conky_20.4.dsc  mx-conky_20.4_amd64.changes  mx-conky_20.5.dsc  mx-conky_20.5_amd64.changes  mx-conky_20.5_i386.changes  mx-conky_21.7.011.dsc  mx-conky_21.7.011_amd64.build  mx-conky_21.7.011_amd64.buildinfo  mx-conky_21.7.011_amd64.changes  mx-conky_21.7.011_armhf.build  mx-conky_21.7.011_armhf.buildinfo  mx-conky_21.7.011_armhf.changes  mx-conky_21.7.011_i386.build  mx-conky_21.7.011_i386.buildinfo  mx-conky_21.7.011_i386.changes  mx-conky_21.7.dsc  mx-conky_21.7_amd64.changes  mx-conky_21.7_i386.changes  mx-conky_22.10.01.dsc  mx-conky_22.10.01_amd64.build  mx-conky_22.10.01_amd64.buildinfo  mx-conky_22.10.01_amd64.changes  mx-conky_22.10.01_armhf.build  mx-conky_22.10.01_armhf.buildinfo  (+102 more)
src/: conkymanager.h  settingsdialog.cpp  version.h
translations/: get_translations  mx-bootrepair_am.ts  mx-bootrepair_ca.ts  mx-bootrepair_cs.ts  mx-bootrepair_de.ts  mx-bootrepair_el.ts  mx-bootrepair_es.ts  mx-bootrepair_fr.ts  mx-bootrepair_hu.ts  mx-bootrepair_it.ts  mx-bootrepair_ja.ts  mx-bootrepair_kk.ts  mx-bootrepair_lt.ts  mx-bootrepair_nl.ts  mx-bootrepair_pl.ts  mx-bootrepair_pt_BR.ts  mx-bootrepair_ro.ts  mx-bootrepair_ru.ts  mx-bootrepair_sk.ts  mx-bootrepair_sv.ts  mx-bootrepair_tr.ts  mx-bootrepair_uk.ts  mx-conky_am.ts  mx-conky_ar.ts  mx-conky_bg.ts  mx-conky_ca.ts  mx-conky_cs.ts  mx-conky_da.ts  mx-conky_de.ts  mx-conky_el.ts  mx-conky_en.ts  mx-conky_es.ts  mx-conky_es_ES.ts  mx-conky_et.ts  mx-conky_eu.ts  mx-conky_fa.ts  mx-conky_fi.ts  mx-conky_fil_PH.ts  mx-conky_fr.ts  mx-conky_fr_BE.ts  (+38 more)
translations-desktop-file/po/: LINGUAS  mx-conky-desktop_am.po  mx-conky-desktop_ar.po  mx-conky-desktop_bg.po  mx-conky-desktop_ca.po  mx-conky-desktop_cs.po  mx-conky-desktop_da.po  mx-conky-desktop_de.po  mx-conky-desktop_el.po  mx-conky-desktop_es.po  mx-conky-desktop_et.po  mx-conky-desktop_eu.po  mx-conky-desktop_fa.po  mx-conky-desktop_fi.po  mx-conky-desktop_fr.po  mx-conky-desktop_fr_BE.po  mx-conky-desktop_he_IL.po  mx-conky-desktop_hi.po  mx-conky-desktop_hr.po  mx-conky-desktop_hu.po  mx-conky-desktop_id.po  mx-conky-desktop_is.po  mx-conky-desktop_it.po  mx-conky-desktop_ja.po  mx-conky-desktop_kk.po  mx-conky-desktop_ko.po  mx-conky-desktop_lt.po  mx-conky-desktop_mk.po  mx-conky-desktop_mr.po  mx-conky-desktop_nb.po  mx-conky-desktop_nl.po  mx-conky-desktop_pl.po  mx-conky-desktop_pt.po  mx-conky-desktop_pt_BR.po  mx-conky-desktop_ro.po  mx-conky-desktop_ru.po  mx-conky-desktop_sk.po  mx-conky-desktop_sl.po  mx-conky-desktop_sq.po  mx-conky-desktop_sr.po  (+5 more)
